# agent-cowork-pptx-creator

./: .gitignore  AGENTS.md  BOOTSTRAP.md  LAYOUT_ENGINE.md  QUICK_START.md  QUICK_START_JP.md  README.md  electron-builder.yml  electron.vite.config.ts  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  requirements-markitdown.txt  sample-demo.pptapp  skills-lock.json  tsconfig.json  tsconfig.node.json  tsconfig.renderer.json
electron/: main.ts  preload.ts
electron/ipc/: chat-handler.ts  copilot-client-utils.ts  copilot-runtime.ts  data-consumer.ts  fs-handler.ts  image-handler.ts  pptx-handler.ts  project-handler.ts  project-zip.ts  python-runtime.ts  scrape-handler.ts  settings-handler.ts  system-prompts.ts  theme-handler.ts  workspace-utils.ts
samples/: layout_blueprint.pptx
samples/en/: Microsoft Copilot Studio Introduction.pptapp
samples/jp/: Microsoft Copilot Studio 導入ガイド.pptapp
scripts/: google_image_search_icrawler.py  layout_engine.py  layout_specs.py  layout_validator.py  markitdown_convert.py  pptx-python-runner.py  setup-markitdown.mjs  setup-python.mjs  test-connections.mjs  verify-python-env.mjs
scripts/layout/: constraint_solver.py  hybrid_layout.py  layout_blueprint.py  layout_specs.py  layout_validator.py
scripts/tempfiles/: convert-icons-to-png.py  download-iconify-cache.mjs  generate_sample_layout_pptx.py
scripts/works/: extract-iconify-lists.mjs  test-connections.mjs
skills/chart-generation/: SKILL.md
src/: App.tsx  main.tsx
workflows/: create-pptx.md  prestaging.md  system-prompts.json
(+79 files in other folders)
